fixes and tweaks

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -2253,6 +2253,7 @@
  GRE_integration_efforts:0 "Integration Efforts"
  MOR_integration_efforts:0 "Integration Efforts"
  IND_integration_efforts:0 "Integration Efforts"
+ FRA_grand_couronnee_defensive_line:0 "Grand Couronné Defensive Line"
  FRA_michel_defensive_plan:0 "Michel Plan"
  FRA_joffre_offensive_plan:0 "Joffre Plan"
  FRA_ww1_mineral_wealth:0 "Mineral Exploitation"
@@ -6898,6 +6899,10 @@ FRA_conservatives_and_republican_federation_merge:0 "§3Conservatives§! and §2
 
  FRA_ww1_educational_reform:0 "Educational Reform"
  FRA_ww1_educational_reform_desc:0 "The stabilization of the new right-wing cartel has made it possible to offer great support to businesses and the working classes, thus leaving us with great room for maneuver to reform the education system."
+
+FRA_ww1_lorraine_defense_plan:0 "Grand Couronné Defense Line"
+FRA_ww1_lorraine_defense_plan_desc:0 "The deputy Louis Marin proposed the construction of a broad line of defense covering a large part of Lorraine and Champagne intended to thwart a German breakthrough in the event of war. This bold plan could be financed by the government."
+FRA_build_forts_in_lorraine:0 "Build §Ylevel 2 Forts§! on each provinces of §YNancy§! State (§Y17§!)."
 
  FRA_ww1_daudet_takeover:0 "Daudet Takeover"
  FRA_ww1_daudet_takeover_desc:0 "The Christian coalition drew its sources from the fight of the republican monarchists of popular action then French action and nationalists. The national project must be oriented around the restoration of more traditional and nationalist values as part of our national influence and our unity as a people."
