--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -367,6 +367,8 @@
  PAP_communism_party_long:0 "Partito Socialista Italiano"
  PAP_neutrality_party:0 "Romana Curia"
  PAP_neutrality_party_long:0 "Romana Curia ministerium suum implent"
+ PAP_democratic_party:0 "UECI"
+ PAP_democratic_party_long:0 "Unione Elettorale Cattolica Italiana"
  PAP_fascism_party:0 "Ultramontanisti"
  
  FIU_fascism_party:0 "ANI"
