--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2095,6 +2095,22 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_exterminate_armenians_desc:0 "There are several towns and villages that accompany a large Armenian population in [FROM.GetName]. By marching them through desert while effectively decreasing their numbers, we can create an ethnically homogenious society."
  TUR_massacre_assyrians:0 "Massacre Assyrians in [FROM.GetName]"
  TUR_massacre_assyrians_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
+ TUR_lift_the_mutasarrifate_of_catalca_and_izmit:0 "Lift the Mutasarrifate of Çatalca and İzmit"
+ TUR_lift_the_mutasarrifate_of_catalca_and_izmit_desc:0 "Mutasarrifate of Çatalca is an autonomous Sanjak within the vilayet of Konstantiniyye, and Mutasarrifate of İzmit being an autonomous sanjak under Vilayet of Hüdavendigar. Under our centralization efforts, we'll lift this special status of Mount Lebanon and make it a yet again Ottoman vilayet."
+ TUR_lift_the_mutasarrifate_of_biga:0 "Lift the Mutasarrifate of Biga"
+ TUR_lift_the_mutasarrifate_of_biga_desc:0 "Mutasarrifate of Biga is an autonomous Sanjak within the vilayet of Hüdavendigar. Under our centralization efforts, we'll lift this special status of Mount Lebanon and make it a yet again Ottoman vilayet."
+ TUR_lift_the_mount_lebanon_mutasarrifate:0 "Lift the Mount Lebanon Mutasarrifate"
+ TUR_lift_the_mount_lebanon_mutasarrifate_desc:0 "Established under the foreign supervision, Mount Lebanon Mutasarrifate is an autonomous Mutasarrifate ruled by Mutasarrifs. Under our centralization efforts, we'll lift this special status of Mount Lebanon and make it a yet again Ottoman vilayet."
+ TUR_lift_the_mutasarrifate_of_jerusalem:0 "Lift the Mutasarrifate of Jerusalem"
+ TUR_lift_the_mutasarrifate_of_jerusalem_desc:0 "Established due to foreign interest, Mutasarrifate of Jerusalem was established in 1872 as a region with special status. Under our centralization efforts, we'll lift this special status of Mount Lebanon and make it a yet again Ottoman vilayet."
+ TUR_abolish_the_sharifate_of_mecca:0 "Abolish the Sharifate of Mecca"
+ TUR_abolish_the_sharifate_of_mecca_desc:0 "Sharifate of Mecca has enjoyed a degree of autonomy across centuries under numerous empires. Yet as the era of decentralized tax empires are coming to an end, we'll abolish the autonomous status this sharifate has and integrate it into our empire."
+ TUR_scrap_the_treaty_of_daan:0 "Scrap the Treaty of Daan"
+ TUR_scrap_the_treaty_of_daan_desc:0 "Though we found the solution in granting autonomy to Imam Yahya, ending centuries old Yemeni-Ottoman conflict, the current state of the nation favors us to abolish their autonomy."
+ TUR_repel_the_grece_memorandum:0 "Repel the Greçë Memorandum"
+ TUR_repel_the_grece_memorandum_desc:0 "Even though we've decided to give Albanians autonomy through approving Greçë Memorandum, the push for centralization effort in our country cannot bestove any special status to Albanians."
+ TUR_lift_the_armenian_reforms:0 "Lift the Armenian Reforms"
+ TUR_lift_the_armenian_reforms_desc:0 "Though the Yeniköy Accord was signed under the pressure of foreign powers, our war against them shall justify our actions in abolishing the agreement, and working towards centralizing our Armenian vilayets."
 
  TUR_minority_local_factories_down:0 "[TUR_minority_local_factories_down]"
  TUR_minority_local_factories_normal:0 "£civ_factory  Local Factories: §G+5%§!\n"
@@ -2378,7 +2394,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_rename_constantinople:0 "Rename Constantinople"
  TUR_dissolve_meclis_saviour_officers:0 "Dissolve Meclis-i Mebusan"
  TUR_ratify_the_treaty_of_daan:0 "Ratify the Treaty of Daan"
- TUR_scrap_the_treaty_of_daan:0 "Scrap the Treaty of Daan"
  treaty_of_daan_tt:0 "£ww1_flag_ARB §YArab Minority§! modifier will be removed from the states that are a core of §Y[YEM.GetName]§! as long as §Y[293.GetName]§! remains as an autonomous state."
  TUR_treaty_of_daan_ratified:0 "Treaty of Daan has been ratified"
  TUR_subjugate_egypt:0 "Subjugate Egypt"
@@ -2617,7 +2632,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_holding_aleppo:0 "Holding Aleppo"
  TUR_holding_dardanelles:0 "Holding Dardanelles"
  TUR_holding_baghdad:0 "Holding Baghdad"
- TUR_lift_the_armenian_reforms:0 "Lift the Armenian Reforms"
  TUR_local_conscription:0 "Local Conscription"
  TUR_local_conscription_in_state:0 "Local Conscriptions in §Y[FROM.GetName]§!"
  ottoman_minority_konstantiniyye_tt:0 "[347.GetName]"
@@ -7582,7 +7596,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_minority_desc_tt1:0 "§LOur empire has always been an ethnically diverse one. From different peoples of the Balkans, to Armenians and Kurds in the east, and predominantly Arabs in the south; there are many non-Turkic ethnic groups residing within our empire.§!"
  ottoman_minority_desc_tt2:0 "§LOur nation has always been an ethnically diverse one. From different peoples of the Balkans, to Armenians and Kurds in the east, and predominantly Arabs in the south; there are many non-Turkic ethnic groups residing within our empire.§!"
  TUR_brewing_yemeni_resistance:0 "Brewing Yemeni Resistance"
- TUR_repel_the_grece_memorandum:0 "Repel the Greçë Memorandum"
  TUR_settle_turks_in_thrace_decision:0 "Settle Turks in Thrace"
  TUR_macedonian_conflict_intervention:0 "Macedonian Conflict Intervention"
  TUR_sweeping_into_macedonia:0 "Sweeping into Macedonia"
