--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -280,7 +280,7 @@
  STATE_279:0 "Santiago"
  STATE_280:0 "Mato Grosso"
  STATE_281:0 "Maldives"
- STATE_282:0 "Kantō"
+ STATE_282:0 "Kanto"
  STATE_283:0 "Kansu" #甘肅
  STATE_284:0 "North Island"
  STATE_285:0 "New South Wales"
@@ -530,10 +530,10 @@
  STATE_529:0 "Chugoku"
  STATE_530:0 "Shikoku"
  STATE_531:0 "Kansai"
- STATE_532:0 "Tōkai"
- STATE_533:0 "Tōhoku"
+ STATE_532:0 "Tokai"
+ STATE_533:0 "Tohoku"
  STATE_534:0 "Hokuriku"
- STATE_535:0 "Chūō Kōchi"
+ STATE_535:0 "Chūo Kochi"
  STATE_536:0 "Hokkaido"
  STATE_537:0 "Karafuto"
  STATE_538:0 "Central Congo"
