fixed authoritarian Canadian Republic being named "Formalize the Republic"

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -8550,8 +8550,8 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  CAN_air_focus_desc:0 "The world is changing, and so is it's wars. An airforce must be made."
  CAN_Loyalty:0 "Canadian Loyalty"
  CAN_Loyalty_desc:0 "For a hundred years we have been loyal to the crown, we will be loyal for a hundred more."
- CAN_republic:0 "Formalize the Republic"
- CAN_republic_desc:0 "No longer will we be bound by chains of a monarchy, for the Canadian Republic."
+ CAN_republic_foucs:0 "Formalize the Republic"
+ CAN_republic_foucs_desc:0 "No longer will we be bound by chains of a monarchy, for the Canadian Republic."
  CAN_democracy:0 "Northern Freedom"
  CAN_democracy_desc:0 "Every man in this world should experience the delights of freedom. Countries shall hear of this utopia."
  CAN_americas_guarantee:0 "Safegaurd the Americas"
