--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10398,5 +10398,52 @@ POR_reconnect_the_exclave_desc:0 "The most northern part of Angola, Cabinda is s
 POR_mappa_d'africa_ambitions:0 "Mappa D'Africa Ambitions"
 POR_mappa_d'africa_ambitions_desc:0 
 
+POR_the_iberian_proposal:0 "The Iberian Proposal"
+POR_the_iberian_proposal_desc:0 ""
+POR_one_idea_two_states:0 "One Idea Two States"
+POR_one_idea_two_states_desc:0 
+POR_pan_iberian_solidarity:0 "Pan Iberian Solidarity"
+POR_pan_iberian_solidarity_desc:0
+POR_mutually_assured_sovereignty:0
+POR_mutually_assured_sovereignty_desc:0
+POR_aliancia_peninsular:0 "Aliancia Peninsular"
+POR_aliancia_peninsular_desc:0
+POR_luso_hispanic_pact:0 "Luso-Hispanic Pact"
+POR_luso_hispanic_pact_desc:0
+POR_gramido_liberty_accords:0 "Gramido Liberty Accords"
+POR_gramido_liberty_accords_desc:0
+POR_host_el_africano:0 "Host El Africano
+POR_host_el_africano_desc:0
+POR_against_a_troubled_europe:0 "Against A Troubled Europe"
+POR_against_a_troubled_europe_desc:0 
+POR_promote_a_liberal_association:0 "Promote a Liberal Association"
+POR_promote_a_liberal_association_desc:0
+POR_galician_and_olivenza_plebiscite:0 "Galician and Olivenza Plebiscite"
+POR_galician_and_olivenza_plebiscite_desc:0 "“Despite losing it in the treaty of Badajoz, we never really dropped our claim to Olivenzia. While not economically important its a matter of national pride. Galicia on the other hand was never part of our state, but the similarities between the Galician and Portuguese languages have resulted in a sense of brotherhood. Perhaps Madrid would be willing to hold plebiscites on these areas?”
+POR_consolidate_the_dual_monarchies:0 "Consolidate the Dual Monarchies"
+POR_consolidate_the_dual_monarchies_desc:0 
+POR_joint_military_exercises:0 "Joint Military Exercises"
+POR_joint_military_exercises_desc:0 
+POR_new_lusophone_partnership:0 "New Lusophone Partnership"
+POR_new_lusophone_partnership_desc:0
+POR_constitucao_de_amplo_comunidade_hispanica:0
+POR_constitucao_de_amplo_comunidade_hispanica_desc:0
+POR_our_fair_share:0 "Our Fair Share"
+POR_our_fair_share_desc:0
+POR_military_envoy_to_germany:0 "Military Envoy to Germany"
+POR_military_envoy_to_germany_desc:0
+POR_interfaith_harmony_pact:0 "Interfaith Harmony Pact"
+POR_interfaith_harmony_pact_desc:0
+POR_the_moniz_scheme:0 "The Moniz Scheme"
+POR_the_moniz_scheme_desc:0 "the Economist Antonio Moniz has proposed a joint development plan for our country and Spain. With this plan we can finally turn Iberia from a backwards region into an economic powerhouse."
+POR_defense_of_the_heartland:0 "Defense Of The Heartland"
+POR_defense_of_the_heartland_desc:0
+POR_overseas_cooperation_initiative:0 "Overseas Cooperation initiative"
+POR_overseas_cooperation_initiative_desc:0
+POR_the_peninsula_security_nexus:0 "The Peninsula Security Nexus"
+POR_the_peninsula_security_nexus_desc:0 
+
+
+
 # Tooltips
 unlocks_national_focus_tt: "§YNational Focus§! becomes §GAvailable§!:"
