--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -133,7 +133,6 @@
  TUR_arab_parliament_opposition:0 "Opposition Within the Parliament"
  TUR_uncontested_arab_voice:0 "Uncontested Arab Voice"
  TUR_officer_of_the_arabs:0 "Officer of the Arabs"
- refiknevzat:0 "Socialist in France"
  TUR_conservative_liberal_arab:0 "Conservative Liberal"
  TUR_liberal_reformer:0 "Liberal Reformer"
  professor_lawyer_arab:0 "Lawyer Professor"
@@ -150,7 +149,8 @@
  TUR_marshal_vezier:0 "Anti-War Candidate"
  nationalist_poet_arab:0 "Nationalist Poet"
  revolutionary_lawyer:0 "Revolutionary Lawyer"
- refiknevzat2:0 ""Avrupalı""
+ TUR_fransiz_ekolu:0 "Fransız Ekolü"
+ TUR_early_era_socialist:0 "Early Era Socialist"
  mustafasuphi:1 "Milli Lenin"
  nihad:0 "Unifier of the People"
  kamil:0 "İngiliz Kamil"
