french monarchist content

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -882,6 +882,22 @@ FRA_goncourt_academy_subvention_desc:0 "The Goncourt Academy is a literary cenat
 FRA_sponsor_the_auberge_the_jeunesses:0 "Sponsor the Auberge de Jeunesses"
 FRA_sponsor_the_auberge_the_jeunesses_desc:0 "The law proposed by §YMarc Sangnier§! proposes the creation of dormitories reserved for students to ensure a cheap housing service guaranteed by the state. This educational innovation will allow many families to send their children to study away from home."
 
+FRA_allow_orleans_visit:0 "Allow Orléans House Visit"
+FRA_allow_orleans_visit_desc:0 "The Orléans house abandoned Ferdinand D'Orléans in favor of his son, Jean. The heir to the French throne could be authorized to make an official visit under police protection across the country. In addition to increasing monarchist fervor, this will provide deserved visibility to the King."
+
+FRA_allow_bourbon_visit:0 "Allow Bourbon House Visit"
+FRA_allow_bourbon_visit_desc:0 "James of Bourbon Parma is the eldest of the Capetians, Duke of Anjou and Duke of Madrid, legitimate claimant to the throne of France. The heir to the French throne could be authorized to make an official visit under police protection across the country. In addition to increasing monarchist fervor, this will provide deserved visibility to the King."
+
+FRA_allow_bonaparte_visit:0 "Allow Bonaparte House Visit"
+FRA_allow_bonaparte_visit_desc:0 "Victor Napoleon is the direct heir of the House of Bonaparte and the main claimant to the title of Emperor of France. Napoleon could visit France in order to obtain welcome visibility, while asserting the prestige of his family and the legitimate interest of his presence on French territory."
+
+FRA_emergency_figurehead:0 "Support an Emergency Figurehead"
+FRA_emergency_figurehead_desc:0 "France is going through an exceptionally difficult period which opens the door to all possible and imaginable authorizations and reforms to restore the determination of the troops and the French. Government support for a pretender to the throne of France would allow us to reinvigorate the ranks while further legitimizing the presence of an authoritarian figure in regency..."
+
+FRA_allow_to_chose_a_popular_figure:0 "§GIn theses difficult times, we will be able to chose a §YPopular Figurehead§! to support out governement.§!"
+
+FRA_could_be_a_popular_figurehead:0 "§LWe could use him as a §YPopular Figurehead§! in favor of our governement...§!"
+
  FRA_unlock_HLM_focus:0 "Unlock Focus : §YHBM Project§!"
  character_not_dead:0 "Has not Passed Away"
 
