--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1871,9 +1871,11 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_france.421.d:0 "Jules Guesdes, eminent politician of the French left, left us on July 28, 1922 in Saint-Mandé. Known for his pro-commune positions and his attachment to collectivist values, he was an icon of revolutionary trade unionism in France."
  ww1_france.421.a:0 "A figure of our history"
 
- ww1_france.422.t:0 "Jules Guesdes Died"
- ww1_france.422.d:0 "Jules Guesdes, eminent politician of the French left, left us on July 28, 1922 in Saint-Mandé. Known for his pro-commune positions and his attachment to collectivist values, he was an icon of revolutionary trade unionism in France."
- ww1_france.422.a:0 "A figure of our history"
+ ww1_france.422.t:0 "Support a Pretender to the Throne"
+ ww1_france.422.d:0 "France is going through an exceptionally difficult period which opens the door to all possible and imaginable authorizations and reforms to restore the determination of the troops and the French. Government support for a pretender to the French throne would allow us to reinvigorate the ranks while further legitimizing the presence of an authoritarian figure in regency. Our invitations sent to suitors from the different houses of France allow us to select a popular figure."
+ ww1_france.422.a:0 "Support Jacques I"
+ ww1_france.422.b:0 "Support Napoléon V"
+ ww1_france.422.c:0 "Support Jean III"
 
  #BELGIUM
  ww1_belgium.1.t:0 "Rape of Belgium"
