--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6486,7 +6486,7 @@ ww1_USA.22.b:0 "Not our problem."
   ww1_USA.26.d:0 "While not ideal, the congressional election results appear to be less bad then expected. Republicans have indeed lost ground, but the situation seems recoverable"
    ww1_USA.26.a:0 "Not bad."
    ww1_USA.1.t:0 "1910 Midterms"
-  ww1_USA.1.d:0 "Thecongressional election results are in, and they are just as bad as expected. Republicans have lost 6 senate seats and several house seats! Legislation will certainly be harder to pass now."
+  ww1_USA.1.d:0 "The congressional election results are in, and they are just as bad as expected. Republicans have lost 6 senate seats and control over the house. Champ Clark is expected to be elevated to house Speaker. Unfortunately for us, Clark has made clear he intends to be a huge obstructionist for our agenda. Due to this, legislation will certainly be harder to pass now."
    ww1_USA.1.a:0 "Don't panic!"
 ww1_USA.28.t:0 "National Progressive Confrence"
 ww1_USA.28.d:0 "The "National Progressive League" has organized a confrence in Washington D.C where they have announced their "dissaproval with Taft." Consisting of 15 Senators and 13 House members, rumor has it they have also elected to support former president Roosevelt in a potential primary bid."
@@ -6527,7 +6527,7 @@ ww1_USA.37.a:0 "The Persian people deserve freedom..."
   ww1_USA.39.d:0 "The long standing disbute between the United States and the British Empire over fishing boundries near Newfoundland have finally been settled in court. The agreement would give the United States fishing rights boundry larger then the usual boundry according to international law, but mantain british rights on some of the surrounding territories of Newfoundland"
    ww1_USA.39.a:0 "This deal works for us!"
    ww1_USA.41.t:0 "Settlers Continue Exploration of Alaska"
-   ww1_USA.41.d:0 "Despite being American territory for over 40 years now, Alaska has remained one of the most unexplored and underpopulated states in the union. This has began to change however, with many moving to the state seeking out unexplored gold mines. In the last few weeks, the Ditarod River especially has seen a massive influx of people.\n\nIt seems these settlers have indeed been finding the gold they have been looking for as well, with decently large gold mines being discovered as of recent. While there is no expectation of another California gold rush type event, the future of Alaska and its economy does look promising as of recent."
+   ww1_USA.41.d:0 "Despite being American territory for over 40 years now, Alaska has remained one of the most unexplored and underpopulated states in the union. This has began to change however, with many moving to the territory seeking out unexplored gold mines. In the last few weeks, the Ditarod River especially has seen a massive influx of people.\n\nIt seems these settlers have indeed been finding the gold they have been looking for as well, with decently large gold mines being discovered as of recent. While there is no expectation of another California gold rush type event, the future of Alaska and its economy does look promising as of recent."
    ww1_USA.41.a:0 "Good for them!"
    ww1_USA.40.t:0 "Champ Clark Advocates for Annexation of Canada"
     ww1_USA.40.d:0 "With the passing of the Canadian-American trade deal, Champ Clark today took to the senate to announce his support for the deal, stating that he supports this as the "first step" towards canadian intergration. He proceeded to call for Canada to begin intergation with America and spoke about America's destiny to annex canada. Even worse, he was met with large applauses on the senate stage! Already Canadian conservatives are calling for Canada to not sign the deal and spreading anti American propaganda."
@@ -6555,6 +6555,7 @@ ww1_USA_wilson.24.b:0 "The Presidency should be above this kind of thing"
 ww1_USA.117.t:0 "Roosevelt Prepares to Return to the United States After Africa Trip"
 ww1_USA.117.d:0 "Former president Theodore Roosevelt has been taking a vacation across Africa for over a year at this point. Going from British East Africa traveling to the Congon before following the Nile up to British Sudan. With a wild ride behind him, including over 11 thousand animals hunted by him in the trip alone, including lions, elephants, birds, and even cheetahs.\n\nWith the 1910 midterms heating up, however, Roosevelt has decided it's time to return home to campaign for progressives on the ballot. As Roosevelt prepared to get on the boat reserved for him, he exclaimed to his travel partners..."
 japan_will_remember_this:0 "Japan will take note of our defense of their citizens in future negotiations..."
+political_professor:0 "Political Professor"
 ww1_USA.117.a:0 "..."We have a lot of campaigning to do, don't we""
 ww1_USA.117.b:0 "..."Oh golly! Is that a group of eight lions charging towards us?""
 riding_razor.tt:0 "This section of the tree is important for shifting the Republican party towards our prefered direction, increasing the £pol_power §HPolitical Power§! we gain by boosting or reducing the influence sides who support or oppose us."
