every chilean general at the time has been added

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -752,6 +752,29 @@ CHL_pedro_pablo_dartnell_encina:0 "Pedro Pablo Dartnell Encina"
 CHL_holley:0 "Adolfo Holley Urzua"
 CHL_korner:0 "Emil Körner Henze"
 CHL_alberto_herrera:0 "Alberto Floridor Herrera Ladrón de Guevara"
+CHL_Estanislao_Del_Canto_Arteaga:0 "Estanislao Del Canto Arteaga"
+CHL_Roberto_Anacleto_Goni_Simpson:0 "Roberto Anacleto Goni Simpson"
+CHL_Jose_Antonio_Soto_Salas:0 "Jose Antonio Soto Salas"
+CHL_Juan_de_Dios_Vial_Guzman:0 "Juan de Dios Vial Guzman"
+CHL_Pedro_Elias_Beytia_Gutierrez:0 "Pedro Elias Beytia Gutierrez"
+CHL_Vicente_Del_Solar_Lermanda:0 "Vicente Del Solar Lermanda"
+CHL_Enrique_Sinforoso_Ledesma_Tajan:0 "Enrique Sinforoso Ledesma Tajan"
+CHL_Martin_Segundo_Escobar_Ravest:0 "Martin Segundo Escobar Ravest"
+CHL_Mario_Tulio_Padilla_Anguita:0 "Mario Tulio Padilla Anguita"
+CHL_Carlos_Rojas_Arancibia:0 "Carlos Rojas Arancibia"
+CHL_Rafael_Edwards_Salas:0 "Rafael Edwards Salas"
+CHL_Alejandro_Binimelis_Argomedo:0 "Alejandro Binimelis Argomedo"
+CHL_Eduardo_Gormaz_Araos:0 "Eduardo Gormaz Araos"
+CHL_Arturo_Marin_Briones:0 "Arturo Marin Briones"
+CHL_Eduardo_Ramirez_Whytaker:0 "Eduardo Ramirez Whytaker"
+CHL_Zenon_Villarreal_Salvo:0 "Zenon Villarreal Salvo"
+CHL_Nicolas_Eugenio_Yavar_Jimenez:0 "Nicolas Eugenio Yavar Jimenez"
+CHL_Manuel_Moore_Bravo:0 "Manuel Moore Bravo"
+CHL_Carlos_Hurtado_Wilson:0 "Carlos Hurtado Wilson"
+CHL_Victor_Rojas_Arancibia:0 "Victor Rojas Arancibia"
+CHL_Vitalicio_Luis_Lopez_Rodriguez:0 "Vitalicio Luis Lopez Rodriguez"
+CHL_Tobias_Barros_Merino:0 "Tobias Barros Merino"
+CHL_Jerman_Fuenzalida_Castro:0 "Jerman Fuenzalida Castro"
 
  # COLOMBIA
  COL_ramon_gonzalez_valencia:0 "Ramón González Valencia"
