--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2737,6 +2737,7 @@ CHL_legacy_of_the_pacific_war:0 "Legacy Of The Pacific War"
 CHL_enforce_conscription:0 "Enforce Conscription"
 CHL_great_war_protests_idea:0 "Nationalist Protests!"
 CHL_great_war_protests_idea_desc:0 "fuckers from germany and england are holding protests in valparaiso of over 100k people, we must put and end to this"
+CHL_a_century_of_poverty_idea2:0 "A CENTURY OF LIES!"
 
  compania_de_lota_y_coronel:0 "Compañía De Lota Y Coronel"
 
