--- a/localisation/english/ww1_equipment_l_english.yml
+++ b/localisation/english/ww1_equipment_l_english.yml
@@ -141,13 +141,13 @@
  #armor
  ENG_tank_design:0 "Little Willie"
  ENG_tank_design_short:0 "Little Willie"
- ENG_light_tank_equipment_1:0 "Renault FT 17"
- ENG_light_tank_equipment_1_short:0 "FT 17"
- ENG_light_tank_equipment_1_canon:0 "FT 17 Char Canon"
+ ENG_light_tank_equipment_1:0 "Renault FT"
+ ENG_light_tank_equipment_1_short:0 "FT"
+ ENG_light_tank_equipment_1_canon:0 "FT Char Canon"
  ENG_light_tank_artillery_equipment_1:0 "Renault FT 75 BS"
  ENG_light_tank_artillery_equipment_1_short:0 "FT 75 BS"
- ENG_light_tank_equipment_2:0 "Renault FT 17/19"
- ENG_light_tank_equipment_2_short:0 "FT 17/19"
+ ENG_light_tank_equipment_2:0 "Renault FT (1918)"
+ ENG_light_tank_equipment_2_short:0 "FT (1918)"
  ENG_light_tank_artillery_equipment_2:0 "Char Peugeot"
  ENG_light_tank_artillery_equipment_2_short:0 "Char Peugeot"
  ENG_light_tank_equipment_3:0 "Renault NC-1"
@@ -205,20 +205,23 @@
  
  #FRA_tank_design:0 ""
  #FRA_tank_design_short:0 ""
- FRA_light_tank_equipment_1:0 "Renault FT 17"
- FRA_light_tank_equipment_1_short:0 "FT 17"
- FRA_light_tank_equipment_1_canon:0 "FT 17 Char Canon"
- FRA_light_tank_equipment_1_signal:0 "FT TSF"
+ FRA_light_tank_equipment_1:0 "Renault FT"
+ FRA_light_tank_equipment_1_short:0 "FT"
+ FRA_light_tank_equipment_1_canon:0 "FT Char Canon"
+ FRA_light_tank_equipment_1_signal:0 "Renault FT TSF"
+ FRA_light_tank_equipment_1_signal_short:0 "FT TSF"
  FRA_light_tank_artillery_equipment_1:0 "Renault FT 75 BS"
  FRA_light_tank_artillery_equipment_1_short:0 "FT 75 BS"
- FRA_light_tank_equipment_2:0 "Renault FT 17/19"
- FRA_light_tank_equipment_2_short:0 "FT 17/19"
+ FRA_light_tank_equipment_2:0 "Renault FT (1918)"
+ FRA_light_tank_equipment_2_short:0 "FT (1918)"
  FRA_light_tank_artillery_equipment_2:0 "Char Peugeot"
  FRA_light_tank_artillery_equipment_2_short:0 "Char Peugeot"
  FRA_light_tank_equipment_3:0 "Renault NC-1"
  FRA_light_tank_equipment_3_short:0 "NC-1"
  FRA_medium_tank_equipment_1:0 "Schneider CA"
  FRA_medium_tank_equipment_1_short:0 "Schneider CA"
+ FRA_light_tank_equipment_1:0 "Renault FT BS"
+ FRA_light_tank_equipment_1_short:0 "FT BS"
  FRA_medium_tank_artillery_equipment_1:0 "Canon de 220 L mle 1917 Schneider"
  FRA_medium_tank_artillery_equipment_1_short:0 "220 L mle 1917 Schneider"
  FRA_medium_tank_equipment_2:0 "Saint-Chamond"
@@ -336,8 +339,8 @@
  
  ITA_tank_design:0 "Fiat 2000"
  ITA_tank_design_short:0 "Fiat 2000"
- ITA_light_tank_equipment_1:0 "Renault FT 17"
- ITA_light_tank_equipment_1_short:0 "FT 17"
+ ITA_light_tank_equipment_1:0 "Renault FT"
+ ITA_light_tank_equipment_1_short:0 "FT"
  ITA_light_tank_artillery_equipment_1:0 "Renault FT 75 BS"
  ITA_light_tank_artillery_equipment_1_short:0 "FT 75 BS"
  ITA_light_tank_equipment_2:0 "Fiat 3000"
