--- a/localisation/english/tgwr_achievements_l_english.yml
+++ b/localisation/english/tgwr_achievements_l_english.yml
@@ -3,18 +3,16 @@
  TGWR_CAREER_PROFILE: "The Great War Redux"
  
  achievements_tgwr:0 "Achievements"
- how_happy_is_the_one_who_says_im_a_turk_NAME:0 "How Happy is the one Who Says I'm a Turk"
- how_happy_is_the_one_who_says_im_a_turk_DESC:0 "As the Ottoman Empire, remove every minority modifier from the states you own."
  TUR_does_not_have_minority:0 "Does not have Modifier:\n      £ww1_flag_ARM §YArmenian Minority§!\n      £ww1_flag_ARB §YArab Minority§!\n      £ww1_game_rule_flag_GRE §YGreek Minority§!\n      £ww1_game_rule_flag_YUG §YSouth Slavic Minority§!\n     §YAlbainian Minority§!\n      £ww1_flag_KUR §YKurdish Minority§!\n      £ww1_flag_GEO §YGeorgian Minority§!\n      £ww1_flag_ROM §YRomanian Minority§!\n     §YAssyrian Minority§!"
  achieving_our_red_apple_NAME:0 "Achieving our Red Apple"
  achieving_our_red_apple_DESC:0 "As the Ottoman Empire, form Turan and select all of the Turkic integration decisions (Integrate Huns into Turan, Integrate Mongols into Turan and Integrate Finns into Turan decisions are not counted)."
  TUR_has_turan_cosmetic_flag:0 "Formed §YTuran§!."
  TUR_selected_all_turan_decisions:0 "Completed all of the §YTurkic integration§! decisions."
  won_by_blood_lost_with_pride_NAME:0 "Won by Blood, Lost with Pride"
- won_by_blood_lost_with_pride_DESC:0 "As the Ottoman Empire, do not lose the ownership of a starting state untill 1923."
+ won_by_blood_lost_with_pride_DESC:0 "As the Ottoman Empire, win the Great War and do not lose the ownership of a starting state untill 1923."
  TUR_1910_lost_a_starting_state:0 "Currently controls all starting states."
  crusader_sultan_NAME:0 "Crusader Sultan"
- crusader_sultan_DESC:0 "As the Ottoman Empire, declare the Caliphate and occupy Rome"
+ crusader_sultan_DESC:0 "As the Ottoman Empire, be ruled by a Sultan and occupy Rome"
  TUR_declared_caliphate:0 "Declared the §YCaliphate§!."
  small_turkish_solution_NAME:0 "Small Turkish Solution"
  small_turkish_solution_DESC:0 "As the Ottoman Empire, lose the Great War and then proceed to retake every state that makes up Ahd-ı Milli"
