--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2098,7 +2098,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_lift_the_mutasarrifate_of_catalca_and_izmit:0 "Lift the Mutasarrifate of Çatalca and İzmit"
  TUR_lift_the_mutasarrifate_of_catalca_and_izmit_desc:0 "Mutasarrifate of Çatalca is an autonomous Sanjak within the vilayet of Konstantiniyye, and Mutasarrifate of İzmit being an autonomous sanjak under Vilayet of Hüdavendigar. Under our centralization efforts, we'll lift this special status of Mount Lebanon and make it a yet again Ottoman vilayet."
  TUR_lift_the_mutasarrifate_of_biga:0 "Lift the Mutasarrifate of Biga"
- TUR_lift_the_mutasarrifate_of_biga_desc:0 "Mutasarrifate of Biga is an autonomous Sanjak within the vilayet of Hüdavendigar. Under our centralization efforts, we'll lift this special status of Mount Lebanon and make it a yet again Ottoman vilayet."
+ TUR_lift_the_mutasarrifate_of_biga_desc:0 "Mutasarrifate of Biga is an autonomous Sanjak within the vilayet of Archipelago. Under our centralization efforts, we'll lift this special status of Mount Lebanon and make it a yet again Ottoman vilayet."
  TUR_lift_the_mount_lebanon_mutasarrifate:0 "Lift the Mount Lebanon Mutasarrifate"
  TUR_lift_the_mount_lebanon_mutasarrifate_desc:0 "Established under the foreign supervision, Mount Lebanon Mutasarrifate is an autonomous Mutasarrifate ruled by Mutasarrifs. Under our centralization efforts, we'll lift this special status of Mount Lebanon and make it a yet again Ottoman vilayet."
  TUR_lift_the_mutasarrifate_of_jerusalem:0 "Lift the Mutasarrifate of Jerusalem"
