--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4168,6 +4168,34 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.88.t:0 "Albanian Resistance Spreads"
  ottoman.88.d:0 "As the Albanian lands under our control are being occupied by other Balkan powers, namely [SER.GetName], [MNT.GetName], [GRE.GetName] and their allies, remaining Albanian intellectuals and rebels flock into the remaining Albanian territories under our empire. As they see our empire no longer able to protect its Albanian population, they prepare for several more revolts and the eventual independence in order to break free from our rule and form their own state to defend."
  ottoman.88.a:0 "As we fight the Balkan powers, enemies within our nation conspire against us."
+ ottoman.89.t:0 "Abolition of the Principality of Samos"
+ ottoman.89.d:0 "As our little island has participated in the Greek War of Independence, we've gained a special status of autonomy and self rule rather than joining Greece. As we'e enjoyed this status of self rule in exchange of a little amount of tribute, Ottoman central government continued to push for further integration. As they're aiming to integrate Greek islands as a whole, they've asked for the Abolition of the Principality."
+ ottoman.89.a:0 "Integration is the only option."
+ ottoman.89.b:0 "If not autonomy, independence is the only thing we'll get."
+ ottoman.90.t:0 "Abolition of the Principality of Samos"
+ ottoman.90.d:0 "Establsihed after the Greek War of Independence in 1834, Samos has been enjoying a large degree of autonomy and self rule. As these privilages go against our centralization policies, we've asked the abolition of the Principality of Samos. Just as we've planned, the governor of the island has caved into our demands."
+ ottoman.90.a:0 "Integrating the Archipelago vilayet."
+ ottoman.91.t:0 "Principality of Samos Defies us"
+ ottoman.91.d:0 "Establsihed after the Greek War of Independence in 1834, Samos has been enjoying a large degree of autonomy and self rule. As these privilages go against our centralization policies, we've asked the abolition of the Principality of Samos. Yet despite of our centralization efforts in the island, the governor has refused our demands."
+ ottoman.91.a:0 "If not through their consent, we'll get them by force."
+ ottoman.92.t:0 "Aleppo Holds"
+ ottoman.92.d:0 "With the heroic Turkish soldier and the brilliant Ottoman Paşas, we've managed to hold Aleppo."
+ ottoman.92.a:0 "Onwards, victory!"
+ ottoman.93.t:0 "Fall of Aleppo"
+ ottoman.93.d:0 "Despite of our best efforts, we've failed to hold Aleppo."
+ ottoman.93.a:0 "A minor step back..."
+ ottoman.94.t:0 "Dardanelles Holds"
+ ottoman.94.d:0 "With the heroic Turkish soldier and the brilliant Ottoman Paşas, we've managed to hold Dardanelles."
+ ottoman.94.a:0 "Onwards, victory!"
+ ottoman.95.t:0 "Fall of Dardanelles"
+ ottoman.95.d:0 "Despite of our best efforts, we've failed to hold Dardanelles."
+ ottoman.95.a:0 "A minor step back..."
+ ottoman.96.t:0 "Baghdad Holds"
+ ottoman.96.d:0 "With the heroic Turkish soldier and the brilliant Ottoman Paşas, we've managed to hold Baghdad."
+ ottoman.96.a:0 "Onwards, victory!"
+ ottoman.97.t:0 "Fall of Baghdad"
+ ottoman.97.d:0 "Despite of our best efforts, we've failed to hold Baghdad."
+ ottoman.97.a:0 "A minor step back..."
 
  ottoman.72.t:0 "Russia Agrees"
  ottoman.72.d:0 "Seems like the Russians also agree with our statement, they agreed to hand us Kars, Artvin and Batumi."
@@ -4195,24 +4223,6 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.80.t:0 "[FROM.GetName] Keeps Bosnia"
  ottoman.80.d:0 "Even though we're in the same faction, [FROM.GetAdjective] government has refused to give up Bosnia to our control."
  ottoman.80.a:0 "Even being allies, it didn't work out."
- ottoman.81.t:0 "Aleppo Holds"
- ottoman.81.d:0 "With the heroic Turkish soldier and the brilliant Ottoman Paşas, we've managed to hold Aleppo."
- ottoman.81.a:0 "Onwards, victory!"
- ottoman.82.t:0 "Fall of Aleppo"
- ottoman.82.d:0 "Despite of our best efforts, we've failed to hold Aleppo."
- ottoman.82.a:0 "A minor step back..."
- ottoman.83.t:0 "Dardanelles Holds"
- ottoman.83.d:0 "With the heroic Turkish soldier and the brilliant Ottoman Paşas, we've managed to hold Dardanelles."
- ottoman.83.a:0 "Onwards, victory!"
- ottoman.84.t:0 "Fall of Dardanelles"
- ottoman.84.d:0 "Despite of our best efforts, we've failed to hold Dardanelles."
- ottoman.84.a:0 "A minor step back..."
- ottoman.85.t:0 "Baghdad Holds"
- ottoman.85.d:0 "With the heroic Turkish soldier and the brilliant Ottoman Paşas, we've managed to hold Baghdad."
- ottoman.85.a:0 "Onwards, victory!"
- ottoman.86.t:0 "Fall of Baghdad"
- ottoman.86.d:0 "Despite of our best efforts, we've failed to hold Baghdad."
- ottoman.86.a:0 "A minor step back..."
  ottoman.87.t:0 "[TUR.GetName] Offer an Alliance"
  ottoman.87.d:0 "With their new ambitious goals to unite the Turkic world, [TUR.GetNameDef] has offered to form a united pact between our two nations. Under this faction, we can unite against the Western imperialism."
  ottoman.87.a:0 "United against imperialism."
