--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4937,6 +4937,7 @@
  has_armenian_minority:0 "Has £ww1_flag_ARM  §YArmenian Minority§! present within the state"
  has_assyrian_minority:0 "Has £ww1_flag_ASY  §YAssyrian Minority§! present within the state"
  has_kurdish_minority:0 "Has £ww1_flag_KUR  §YKurdish Minority§! present within the state"
+ has_arab_minority:0 "Has £ww1_flag_ARB  §YArab Minority§! present within the state"
 
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
  TUR_legacy_of_the_4th_lancers_desc:0 "It was the soldiers from the 4th lancers who cried the name of the sultan. Though it was quickly crushed, it's legacy is still renown among sultan and chaliph supporters."
@@ -5720,7 +5721,6 @@
  TUR_restore_order_in_egypt_tt:0 "§YSuppression on Arabs§! decision can now also be taken for §Y[453.GetName]§!, §Y[447.GetName]§!, §Y[446.GetName]§!, §Y[452.GetName]§!, §Y[456.GetName]§!, §Y[457.GetName]§! and §Y[551.GetName]§!."
  TUR_destruction_of_the_thracian_bulgarians:0 "Oppress Thracian Bulgarians"
  TUR_destruction_of_the_thracian_bulgafrians_desc:0 "Thrace, the gate that leads the heart of our empire, is infested by many ethnicites. The most prominent of these ethnicities is the Bulgarians. If we want to defend our empire, we must first finish these internal threats."
- TUR_destruction_of_the_thracian_bulgarians_tt:0 "Local Population: [?TUR_destruction_of_the_thracian_bulgarians_state_population|R0]"
  TUR_erase_bulgarian_identity:0 "Erase Bulgarian Identity"
  TUR_erase_bulgarian_identity_desc:0 "Bulgarians has developed their own national identity and combat against our rule even before they gained their own autonomy. We might be back in Bulgarian soils, but this doesn't guarantee our permanent stay in the region. We must erase the Bulgarian identity so even if we are to leave, they'll still stay loyal to us."
  TUR_erase_bulgarian_identity_tt2:0 "Local Population: [?TUR_erase_bulgarian_identity_state_population|R0]"
